--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a web for tracking attendees in a virtual event",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cypress-dev": "cypress open"
   },
   "repository": {
     "type": "git",
@@ -17,11 +17,10 @@
   },
   "homepage": "https://github.com/Castro-D/virtual-event-web#readme",
   "devDependencies": {
+    "cypress": "^8.7.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.2"
   },
-  "dependencies": {
-    "uuid": "^8.3.2"
-  }
+  "dependencies": {}
 }
