--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "cypress-dev": "cypress open",
     "test": "jest --collect-coverage",
-    "test:dev": "jest --watch --verbose"
+    "test:dev": "jest --watchAll --verbose"
   },
   "repository": {
     "type": "git",
